--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cookie-session": "^2.0.0-beta.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "express-validator": "^3.1.3",
